[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CausalPriorFitting"
version = "0.1.0"
description = "CausalPriorFitting package"
authors = [
    { name="Arik Reuter", email="your@email.com" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}